feat: added qr code to generated doc

--- a/lib/slugs/pletter/template.tex
+++ b/lib/slugs/pletter/template.tex
@@ -285,7 +285,7 @@ $endif$
 \opening{$opening$}
 
 $body$
-
+\includegraphics[scale=0.25]{$qrcode$}
 $if(closing)$
 $if(closing-indentation)$
 \longindentation=$closing-indentation$
