added missing theme fields for testing, fixed failing test

--- a/lib/slugs/pletter/template.tex
+++ b/lib/slugs/pletter/template.tex
@@ -38,7 +38,7 @@ $endfor$
 \usepackage{graphicx, grffile}
 $if(mainfont)$
   \setmainfont[
-    Path=$path$/,
+    Path=$path$/fonts/,
     BoldFont = $mainfont$
   ]{$mainfont$}
 $endif$
