[WD-582] updated build to have theme with multiple fonts wraft-docs/wraft-docs-api!127
* fix: minor fixes

* fix: minor fix

* fix: minor fix

* fix: minor fix for filtering

* feat: updated build to have theme with multiple fonts

--- a/priv/slugs/contract/template.tex
+++ b/priv/slugs/contract/template.tex
@@ -50,10 +50,11 @@
 \definecolor{foo}{HTML}{2c41ac}
 \sectionfont{\color{foo}}
 
-$if(path)$
-\setmainfont[
-Path = $path$/fonts/,
-BoldFont = Mallory-Bold.otf]{Mallory-Book.otf}
+$if(mainfont)$
+  \setmainfont[
+    Path=$path$/fonts/,
+    $for(mainfontoptions)$$mainfontoptions$$sep$,$endfor$
+  ]{$mainfont$}
 $endif$
 
 % Longtabe and friends
