[WD-687] Added some space between body and qr code so as not to overlap wraft-docs/wraft-docs-api!169
* fix: added some space between body and qr code so as not to overlap in certain edge cases like when the body is small

--- a/priv/slugs/contract/template.tex
+++ b/priv/slugs/contract/template.tex
@@ -144,7 +144,8 @@ $endif$
 \tableofcontents
 \newpage
 $body$
-
+% Add some vertical space before the QR code
+\vspace{10mm}
 $if(qrcode)$
   \includegraphics[scale=20.25]{$qrcode$}
 $endif$
