--- a/priv/slugs/pletter/template.tex
+++ b/priv/slugs/pletter/template.tex
@@ -282,6 +282,8 @@ $endif$
     \opening{$opening$}
 
   $body$
+  % Add some vertical space before the QR code
+  \vspace{10mm}
   $if(qrcode)$
     \includegraphics[scale=0.25]{$qrcode$}
   $endif$
