[WD-701] fixed the issue with latex background only appearing in the first page... wraft-docs/wraft-docs-api!172
* fix: fixed the issue with latex background only appearing in the first page and not the successive ones

--- a/priv/slugs/pletter/template.tex
+++ b/priv/slugs/pletter/template.tex
@@ -259,7 +259,7 @@ $endif$
 
 $if(letterhead)$
 \usepackage{wallpaper}
-\ThisULCornerWallPaper{1}{$letterhead$}
+\ULCornerWallPaper{1}{$letterhead$}
 $endif$
 
 \begin{document}
