[WD-893] Add organisation name, author name and author email as variables passed into cover.tex file on contract type slug based document generation (#70)
* Add organisation_name , author name and author email as variables based on the organisation from which the user generates the document in the context of contract type layout based document generation.

Co-authored-by: Vasil <vasil.abdulrasaque@aurut.com>
Reviewed-on: https://bucket.functionary.co/Wraft/wraft-docs-api/pulls/70

--- a/priv/slugs/contract/cover.tex
+++ b/priv/slugs/contract/cover.tex
@@ -11,8 +11,8 @@
     \emph{Prepared By}\\[0.1cm]
     \noindent\makebox[\textwidth]{%
       \begin{tabular}{lr}%
-        Muneef Hameed \\
-        muneef@aurut.com\\
+        \authorName \\
+        \authorEmail \\
     \end{tabular}}\\[1cm]
 
     \vfill
