--- a/priv/slugs/contract/template.tex
+++ b/priv/slugs/contract/template.tex
@@ -79,10 +79,12 @@ $if(id)$
 \newcommand{\newCommandProposalId}{$id$}
 $endif$
 
-\newcommand{\newCommandProposalParty}{Functionary Labs Pvt Ltd}
+\newcommand{\newCommandProposalParty}{$organisation_name$}
 % Required for syntax highlighting
 $highlighting-macros$
 
+\newcommand{\authorName}{$author_name$}
+\newcommand{\authorEmail}{$author_email$}
 
 % Don't let images overflow the page
 % Can still explicit set width/height/options for an image
