fix: handle table creation failure scenario due to pandoc latest version

--- a/priv/slugs/contract/template.tex
+++ b/priv/slugs/contract/template.tex
@@ -58,7 +58,7 @@ $if(mainfont)$
   $endif$
 
   % Longtabe and friends
-  \usepackage{rotating,multirow,longtable,booktabs}
+  \usepackage{rotating,multirow,longtable,booktabs,calc,array}
 
   % Polyglossia settings
   \setmainlanguage{english} % or danish
