--- a/priv/slugs/pletter/template.tex
+++ b/priv/slugs/pletter/template.tex
@@ -36,7 +36,7 @@ $endif$
                       linkcolor=black}{hyperref}
 
 \usepackage{eforms}
-
+\usepackage{geometry}
 $if(fontfamily)$
 \usepackage[$for(fontfamilyoptions)$$fontfamilyoptions$$sep$,$endfor$]{$fontfamily$}
 $else$
@@ -326,63 +326,67 @@ $endif$
 
 \begin{document}
 
+$if(margin_top)$$if(margin_left)$$if(margin_bottom)$$if(margin_right)$
+			\newgeometry{top=$margin_top$cm, left=$margin_left$cm, bottom=$margin_bottom$cm, right=$margin_right$cm}
+		$endif$$endif$$endif$$endif$
+
 $for(include-before)$
 $include-before$
 
 $endfor$
 $if(toc)$
-{
-		$if(colorlinks)$
-		\hypersetup{linkcolor=$if(toccolor)$$toccolor$$else$$endif$}
-		$endif$
-		\setcounter{tocdepth}{$toc-depth$}
-		\tableofcontents
-	}
-$endif$
-
-\begin{letter}{$for(address)$$address$$sep$\\$endfor$$if(subject)$\\ ~ \\$subject$$endif$}
-		\opening{$opening$}
-
-	$body$
-		% Add some vertical space before the QR code
-		\vspace{10mm}
-
-	$if(qrcode)$
-		\includegraphics[scale=0.25]{$qrcode$}
-	$endif$
-	$if(closing)$
-	$if(closing-indentation)$
-		\longindentation=$closing-indentation$
-	$endif$
-		\closing{$closing$}
-	$endif$
-	$if(encl)$
-		\encl{$for(encl)$$encl$$sep$\\$endfor$}
-	$endif$
-	$if(cc)$
-		\cc{$for(cc)$$cc$$sep$\\$endfor$}
-	$endif$
-	$if(ps)$
-		\ps{$ps$}
+		{
+				$if(colorlinks)$
+				\hypersetup{linkcolor=$if(toccolor)$$toccolor$$else$$endif$}
+				$endif$
+				\setcounter{tocdepth}{$toc-depth$}
+				\tableofcontents
+			}
 	$endif$
 
-\end{letter}
+		\begin{letter}{$for(address)$$address$$sep$\\$endfor$$if(subject)$\\ ~ \\$subject$$endif$}
+				\opening{$opening$}
 
-$if(natbib)$
+			$body$
+				% Add some vertical space before the QR code
+				\vspace{10mm}
+
+			$if(qrcode)$
+				\includegraphics[scale=0.25]{$qrcode$}
+			$endif$
+			$if(closing)$
+			$if(closing-indentation)$
+				\longindentation=$closing-indentation$
+			$endif$
+				\closing{$closing$}
+			$endif$
+			$if(encl)$
+				\encl{$for(encl)$$encl$$sep$\\$endfor$}
+			$endif$
+			$if(cc)$
+				\cc{$for(cc)$$cc$$sep$\\$endfor$}
+			$endif$
+			$if(ps)$
+				\ps{$ps$}
+			$endif$
+
+		\end{letter}
+
+	$if(natbib)$
 $if(bibliography)$
 $if(biblio-title)$
 $if(book-class)$
-\renewcommand\bibname{$biblio-title$}
-$else$
-\renewcommand\refname{$biblio-title$}
+		\renewcommand\bibname{$biblio-title$}
+	$else$
+		\renewcommand\refname{$biblio-title$}
+	$endif$
 $endif$
-$endif$
-\bibliography{$for(bibliography)$$bibliography$$sep$,$endfor$}
+		\bibliography{$for(bibliography)$$bibliography$$sep$,$endfor$}
 
-$endif$
+	$endif$
 $endif$
 $if(biblatex)$
-\printbibliography$if(biblio-title)$[title=$biblio-title$]$endif$
+		\printbibliography$if(biblio-title)$[title=$biblio-title$]$endif$
 
 $endif$
 $for(include-after)$
