feat: add multiple font file support for latex and typst

--- a/priv/slugs/contract/template.tex
+++ b/priv/slugs/contract/template.tex
@@ -179,6 +179,6 @@ $if(path)$
 		\vspace{10mm}
 
 	$if(qrcode)$
-		\includegraphics[scale=20.25]{$qrcode$}
+		\includegraphics[width=2.5cm]{$qrcode$}
 	$endif$
 \end{document}
