--- a/priv/slugs/pletter/template.tex
+++ b/priv/slugs/pletter/template.tex
@@ -352,7 +352,7 @@ $if(toc)$
 				\vspace{10mm}
 
 			$if(qrcode)$
-				\includegraphics[scale=0.25]{$qrcode$}
+				\includegraphics[width=2.5cm]{$qrcode$}
 			$endif$
 			$if(closing)$
 			$if(closing-indentation)$
