--- a/priv/slugs/contract/template.tex
+++ b/priv/slugs/contract/template.tex
@@ -50,7 +50,7 @@
 
 
 $if(body_color)$
-  \StrGobbleLeft{$body_color$}{1}[\BodyColorHex]  % remove leading #
+  \StrGobbleLeft{$body_color$}{1}[\BodyColorHex]
   \definecolor{BodyColor}{HTML}{\BodyColorHex}
   \pagecolor{BodyColor}
 $else$
@@ -58,14 +58,32 @@ $else$
   \pagecolor{BodyColor}
 $endif$
 
+\newcommand{\setAllHeadingColors}[1]{
+  \sectionfont{\color{#1}}
+  \subsectionfont{\color{#1}}
+  \subsubsectionfont{\color{#1}}
+  \paragraphfont{\color{#1}}
+  \subparagraphfont{\color{#1}}
+}
+
 $if(primary_color)$
-  \StrGobbleLeft{$primary_color$}{1}[\PrimaryColorHex]  % remove leading #
+  \StrGobbleLeft{$primary_color$}{1}[\PrimaryColorHex]
   \definecolor{PrimaryColor}{HTML}{\PrimaryColorHex}
-  \sectionfont{\color{PrimaryColor}}
+  \setAllHeadingColors{PrimaryColor}
 $else$
   \definecolor{foo}{HTML}{2c41ac}
-  \sectionfont{\color{foo}}
+  \setAllHeadingColors{foo}
 $endif$
+
+$if(secondary_color)$
+  \StrGobbleLeft{$secondary_color$}{1}[\SecondaryColorHex]
+  \definecolor{SecondaryColor}{HTML}{\SecondaryColorHex}
+  \color{SecondaryColor}
+$else$
+  \definecolor{SecondaryColor}{HTML}{000000}
+  \color{SecondaryColor}
+$endif$
+
 
 $if(mainfont)$
 \setmainfont[
@@ -158,8 +176,13 @@ $highlighting-macros$
 \setlength{\tabcolsep}{0.8em} % for the horizontal padding
 \renewcommand{\arraystretch}{1.7}% for the vertical padding
 
+$if(toc)$
+\usepackage{tocloft}
+$endif$
+
 $if(letterhead)$
 \usepackage{wallpaper}
+\ClearWallPaper
 \ULCornerWallPaper{1}{$letterhead$}
 $endif$
 
@@ -178,11 +201,13 @@ $if(path)$
 		% chapter: 0, section: 1, subsection: 2 etc
 	$if(toc)$
 		{
+				\color{$if(toccolor)$$toccolor$$else$black$endif$}
 				$if(colorlinks)$
 				\hypersetup{linkcolor=$if(toccolor)$$toccolor$$else$$endif$}
 				$endif$
 				\setcounter{secnumdepth}{3}
 				\setcounter{tocdepth}{$toc_depth$}
+
 				\tableofcontents
 			}
 	$endif$
