--- a/priv/slugs/pletter/template.tex
+++ b/priv/slugs/pletter/template.tex
@@ -301,7 +301,6 @@ $endif$
 
 % Body background color
 $if(body_color)$
-  % Remove leading '#' if present
   \StrGobbleLeft{$body_color$}{1}[\BodyColorHex]
   \definecolor{BodyColor}{HTML}{\BodyColorHex}
   \pagecolor{BodyColor}
@@ -317,28 +316,41 @@ $else$
   \definecolor{PrimaryColor}{HTML}{000000}
 $endif$
 
+$if(secondary_color)$
+  \StrGobbleLeft{$secondary_color$}{1}[\SecondaryColorHex]
+  \definecolor{SecondaryColor}{HTML}{\SecondaryColorHex}
+  \color{SecondaryColor}
+$else$
+  \definecolor{SecondaryColor}{HTML}{000000}
+  \color{SecondaryColor}
+$endif$
+
 % replaces pandoc heading sectioning
 \makeatletter
 \newcommand\section{\@startsection{section}{1}{\z@}%
   {-3.5ex \@plus -1ex \@minus -.2ex}%
   {2.3ex \@plus.2ex}%
   {\normalfont\Large\bfseries\color{PrimaryColor}}}
+
 \newcommand\subsection{\@startsection{subsection}{2}{\z@}%
   {-3.25ex\@plus -1ex \@minus -.2ex}%
   {1.5ex \@plus .2ex}%
-  {\normalfont\large\bfseries}}
+  {\normalfont\large\bfseries\color{PrimaryColor}}}
+
 \newcommand\subsubsection{\@startsection{subsubsection}{3}{\z@}%
   {-3.25ex\@plus -1ex \@minus -.2ex}%
   {1.5ex \@plus .2ex}%
-  {\normalfont\normalsize\bfseries}}
+  {\normalfont\normalsize\bfseries\color{PrimaryColor}}}
+
 \newcommand\paragraph{\@startsection{paragraph}{4}{\z@}%
   {3.25ex \@plus1ex \@minus.2ex}%
   {-1em}%
-  {\normalfont\normalsize\bfseries}}
+  {\normalfont\normalsize\bfseries\color{PrimaryColor}}}
+
 \newcommand\subparagraph{\@startsection{subparagraph}{5}{\parindent}%
   {3.25ex \@plus1ex \@minus .2ex}%
   {-1em}%
-  {\normalfont\normalsize\bfseries}}
+  {\normalfont\normalsize\bfseries\color{PrimaryColor}}}
 \makeatother
 
 \begin{document}
