fix: use secondary color for headers in typst templates

--- a/priv/slugs/contract/template.tex
+++ b/priv/slugs/contract/template.tex
@@ -107,7 +107,7 @@ $endif$
 \renewcommand{\baselinestretch}{1.25}
 
 $if(title)$
-\newcommand{\newCommandProposalTitle}{$title$}
+\newcommand{\newCommandProposalTitle}{\textcolor{PrimaryColor}{$title$}}
 $endif$
 
 $if(id)$
